--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 
     implementation 'org.webjars:stomp-websocket:2.3.3'
     implementation 'org.springframework.boot:spring-boot-starter-websocket'
+
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 bootJar {
