--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ springBoot {
 
 dependencies {
     implementation 'org.mapstruct:mapstruct:1.3.1.Final'
+    implementation 'org.jetbrains:annotations:20.1.0'
     annotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
     testAnnotationProcessor 'org.mapstruct:mapstruct-processor:1.3.1.Final'
 
@@ -54,6 +55,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security:2.7.0'
     implementation 'com.h2database:h2:2.1.212'
+
+    implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 }
 
 bootJar {
